# jsonaut

./: .gitignore  ACTIONPLAN.md  DEPLOY.md  IDEA.md  LAUNCH.md  MARKETING.md  PLAN.md  README.md  package-lock.json  package.json  server.json  tsconfig.json  wrangler.toml
clients/js/: README.md  package-lock.json  package.json  tsconfig.json
clients/js/src/: index.ts
clients/python/: README.md  pyproject.toml
clients/python/jsonaut/: __init__.py
src/: dev.ts  worker.ts
src/core/: coerce.ts  extract.ts  llm.ts  metrics.ts  pipeline.ts  schema-infer.ts  security.ts  storage.ts  types.ts
src/http/: app.ts  billing.ts  cdp.ts  dashboard.ts  demo.ts  payment.ts  ratelimit.ts  staticContent.ts
src/mcp/: server.ts
test/: cdp.test.ts  features.test.ts  pipeline.test.ts  security.test.ts
